Added support for 1.21.8 Dropped support for versions below 1.16.5 Migrated from java 8 to java 17 Fixed legacy material support initialization Added item-update-period option Added update-only property Fixed cancellation not being applied